src/test/deca/context/invalid/intermediaire2/mots_reserves/00asm.deca
// Description:
// Test du mettre le mot réservé asm, en nom de variable.
//
// Resultats:
//  00asm.deca:10:8:
//
// Historique:
//    crée le 17/06/2022
{
    int asm;
}